--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,9 @@ slog-json = "2.6.1"
 slog-async = "2.8.0"
 slog-term = "2.9.1"
 slog-stdlog = "4.1.1"
+redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
+aws-sdk-s3 = "1.38.0"
+aws-config = "1.5.3"
+aws-types = "1.3.2"
+bytes = "1.6.0"
+aws-smithy-types = "1.2.0"
