--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,5 @@ aws-types = "1.3.2"
 bytes = "1.6.0"
 aws-smithy-types = "1.2.0"
 chrono = "0.4.38"
+aws-sdk-dynamodb = "1.37.0"
+serde_dynamo = "4.2.14"
